--- a/Azure_mussNL.ipynb
+++ b/Azure_mussNL.ipynb
@@ -23,8 +23,8 @@
     "resource_name = \"MussNL_RS\"\n",
     "workspace_name = \"MussNL_WS\"\n",
     "subscriptionID = \"b64de736-fc43-421b-8a8b-9314ee9d509e\" # Please enter your subscription id here\n",
-    "aml_compute_target = \"demo-cluster\" #ALL SMALL LETTER, NO underscore, 16ws long only.\n",
-    "experiment_name= 'demo_expirement'"
+    "aml_compute_target = \"muss-cluster\" #ALL SMALL LETTER, NO underscore, 16ws long only.\n",
+    "experiment_name= 'muss_expirement'"
    ]
   },
   {
@@ -37,7 +37,7 @@
     "# Now create Workspace\n",
     "try:\n",
     "    ws=Workspace.from_config()\n",
-    "    print('Workspace is already exist')\n",
+    "    print('Workspace already exists')\n",
     "except:\n",
     "    ws=Workspace.create(workspace_name, \n",
     "                    resource_group=resource_name,\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2287e770",
+   "id": "e499fd6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,13 +95,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd87c2fc",
+   "id": "67abb988",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create environment to execute your code\n",
     "env = Environment.from_conda_specification(name=\"azure_ml\",file_path=\"./envfile.yml\")\n",
-    "config=ScriptRunConfig(source_directory=\"./\",script=\"mytrain.py\",compute_target=aml_compute_target,environment=env)\n",
+    "config=ScriptRunConfig(source_directory=\"./\",script=\"azure_mussNL_train.py\",compute_target=aml_compute_target,environment=env)\n",
     "execution=exp.submit(config)\n",
     "execution.wait_for_completion(show_output=True)"
    ]
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2209040",
+   "id": "60a9f962",
    "metadata": {},
    "outputs": [],
    "source": []
